--- a/app/globals.css
+++ b/app/globals.css
@@ -14,12 +14,12 @@
   --card-foreground: #0a0a0a;
   --popover: #ffffff;
   --popover-foreground: #0a0a0a;
-  --primary: #171717;
+  --primary: #232323;
   --primary-foreground: #fafafa;
   --secondary: #e8eee3;
   --secondary-foreground: #171717;
   --muted: #f5f5f5;
-  --muted-foreground: #737373;
+  --muted-foreground: #838383;
   --accent: #f5f5f5;
   --accent-foreground: #171717;
   --destructive: #e7000b;
@@ -28,14 +28,14 @@
   --input: #e5e5e5;
   --ring: #a1a1a1;
 
-  --income: #228948;
-  --expense: #c66734;
+  --income: #36a960;
+  --expense: #d97757;
 
-  --chart-1: #228948;
-  --chart-2: #c66734;
-  --chart-3: #6213c8;
-  --chart-4: #9a37e6;
-  --chart-5: #cc8d19;
+  --chart-1: #36a960;
+  --chart-2: #d97757;
+  --chart-3: #36a960;
+  --chart-4: #d97757;
+  --chart-5: #3a5ade;
   --sidebar: #ffffff;
   --sidebar-foreground: #0a0a0a;
   --sidebar-primary: #171717;
@@ -83,14 +83,14 @@
   --input: #343434;
   --ring: #737373;
 
-  --income: #228948;
-  --expense: #c66734;
+  --income: #36a960;
+  --expense: #d97757;
 
-  --chart-1: #228948;
-  --chart-2: #c66734;
-  --chart-3: #6213c8;
-  --chart-4: #9a37e6;
-  --chart-5: #cc8d19;
+  --chart-1: #36a960;
+  --chart-2: #d97757;
+  --chart-3: #36a960;
+  --chart-4: #d97757;
+  --chart-5: #657fe8;
   --sidebar: #171717;
   --sidebar-foreground: #fafafa;
   --sidebar-primary: #1447e6;
