--- a/app/globals.css
+++ b/app/globals.css
@@ -84,7 +84,7 @@
   --input: #343434;
   --ring: #737373;
 
-  --description: #3d301f;
+  --description: #361f3d;
   --income: #36a960;
   --expense: #d97757;
 
