--- a/app/globals.css
+++ b/app/globals.css
@@ -7,47 +7,47 @@
 }
 
 :root {
-  --background: #f7f6f5;
-  --foreground: #0c0b0b;
-  --card: #f3f2f0;
-  --card-foreground: #0c0b0b;
-  --popover: #f3f2f0;
-  --popover-foreground: #0c0b0b;
-  --primary: #fe671c;
-  --primary-foreground: #f1f0ed;
-  --secondary: #d0c9c3;
-  --secondary-foreground: #171717;
-  --muted: #eae8e6;
-  --muted-foreground: #8c877c;
-  --accent: #eae8e6;
-  --accent-foreground: #171717;
-  --destructive: #e7000b;
-  --destructive-foreground: #f3f2f0;
-  --border: #d0c9c3;
-  --input: #d0c9c3;
-  --ring: #a1a1a1;
+  --background: #f8f6f4;
+  --foreground: #352a27;
+  --card: #f4efee;
+  --card-foreground: #352a27;
+  --popover: #f4efee;
+  --popover-foreground: #352a27;
+  --primary: #ee622a;
+  --primary-foreground: #fff7f2;
+  --secondary: #c3b3b6;
+  --secondary-foreground: #574a45;
+  --muted: #cfbec1;
+  --muted-foreground: #665954;
+  --accent: #dd602d;
+  --accent-foreground: #f8f6f4;
+  --destructive: #d84a3a;
+  --destructive-foreground: #fff7f2;
+  --border: #cfbec1;
+  --input: #cfbec1;
+  --ring: #dd602d;
 
-  --banner-background: #fe671c;
-  --banner-foreground: #f1f0ed;
-  --month-picker: #45403e;
-  --month-picker-foreground: #f1f0ed;
-  --description: #c2ebc3;
-  --income: #36a960;
-  --expense: #d97757;
+  --banner-background: #ee622a;
+  --banner-foreground: #fff7f2;
+  --month-picker: #574a45;
+  --month-picker-foreground: #fdf9f7;
+  --description: #cfbec1;
+  --income: #574a45;
+  --expense: #dd602d;
 
-  --chart-1: #b9d47e;
-  --chart-2: #d97757;
-  --chart-3: #b9d47e;
-  --chart-4: #d97757;
-  --chart-5: #3a5ade;
-  --sidebar: #f7f6f5;
-  --sidebar-foreground: #0c0b0b;
-  --sidebar-primary: #45403e;
-  --sidebar-primary-foreground: #f1f0ed;
-  --sidebar-accent: #45403e;
-  --sidebar-accent-foreground: #f7f6f5;
-  --sidebar-border: #d0c9c3;
-  --sidebar-ring: #a1a1a1;
+  --chart-1: #ee622a;
+  --chart-2: #dd602d;
+  --chart-3: #574a45;
+  --chart-4: #565353;
+  --chart-5: #c3b3b6;
+  --sidebar: #f8f6f4;
+  --sidebar-foreground: #352a27;
+  --sidebar-primary: #574a45;
+  --sidebar-primary-foreground: #fff7f2;
+  --sidebar-accent: #ee622a;
+  --sidebar-accent-foreground: #f8f6f4;
+  --sidebar-border: #c3b3b6;
+  --sidebar-ring: #dd602d;
 
   --radius: 0.4rem;
   --shadow-2xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
@@ -67,47 +67,47 @@
 }
 
 .dark {
-  --background: #0c0c0c;
-  --foreground: #8d877c;
-  --card: #1c1a19;
-  --card-foreground: #f1f0ed;
-  --popover: #0f1110;
-  --popover-foreground: #f1f0ed;
-  --primary: #fe671c;
-  --primary-foreground: #151816;
-  --secondary: #45403e;
-  --secondary-foreground: #f1f0ed;
-  --muted: #262626;
-  --muted-foreground: #8c877d;
-  --accent: #404040;
-  --accent-foreground: #f1f0ed;
-  --destructive: #ff6467;
-  --destructive-foreground: #f1f0ed;
-  --border: #312e2c;
-  --input: #343434;
-  --ring: #737373;
+  --background: #1c1817;
+  --foreground: #e6dedd;
+  --card: #221d1c;
+  --card-foreground: #fff7f2;
+  --popover: #1f1a19;
+  --popover-foreground: #fff7f2;
+  --primary: #ee622a;
+  --primary-foreground: #1b100d;
+  --secondary: #574a45;
+  --secondary-foreground: #fff7f2;
+  --muted: #2b2524;
+  --muted-foreground: #c3b3b6;
+  --accent: #dd602d;
+  --accent-foreground: #fff7f2;
+  --destructive: #d84a3a;
+  --destructive-foreground: #fff7f2;
+  --border: #2e2726;
+  --input: #2e2726;
+  --ring: #dd602d;
 
-  --banner-background: #fe671c;
-  --banner-foreground: #0c0c0c;
-  --month-picker: #45403e;
-  --month-picker-foreground: #e6e6e6;
-  --description: #bc822e;
-  --income: #b9d47e;
-  --expense: #d97757;
+  --banner-background: #ee622a;
+  --banner-foreground: #1c1817;
+  --month-picker: #574a45;
+  --month-picker-foreground: #f7efed;
+  --description: #dd602d;
+  --income: #ee622a;
+  --expense: #dd602d;
 
-  --chart-1: #b9d47e;
-  --chart-2: #d97757;
-  --chart-3: #b9d47e;
-  --chart-4: #d97757;
-  --chart-5: #657fe8;
-  --sidebar: #1c1a19;
-  --sidebar-foreground: #f1f0ed;
-  --sidebar-primary: #1447e6;
-  --sidebar-primary-foreground: #f1f0ed;
-  --sidebar-accent: #3d3937;
-  --sidebar-accent-foreground: #f1f0ed;
-  --sidebar-border: #282828;
-  --sidebar-ring: #525252;
+  --chart-1: #ee622a;
+  --chart-2: #dd602d;
+  --chart-3: #574a45;
+  --chart-4: #565353;
+  --chart-5: #c3b3b6;
+  --sidebar: #221d1c;
+  --sidebar-foreground: #fff7f2;
+  --sidebar-primary: #dd602d;
+  --sidebar-primary-foreground: #fff7f2;
+  --sidebar-accent: #dd602d;
+  --sidebar-accent-foreground: #fff7f2;
+  --sidebar-border: #2e2726;
+  --sidebar-ring: #dd602d;
 
   --radius: 0.4rem;
   --shadow-2xs: 0 1px 3px 0px hsla(0, 0%, 23%, 0.05);
