--- a/app/globals.css
+++ b/app/globals.css
@@ -13,27 +13,28 @@
   --card-foreground: #352a27;
   --popover: #f4efee;
   --popover-foreground: #352a27;
-  --primary: #ee622a;
+  --primary: #d97757;
   --primary-foreground: #fff7f2;
   --secondary: #c3b3b6;
   --secondary-foreground: #574a45;
   --muted: #cfbec1;
   --muted-foreground: #665954;
-  --accent: #dd602d;
+  --accent: #d97757;
   --accent-foreground: #f8f6f4;
   --destructive: #d84a3a;
   --destructive-foreground: #fff7f2;
   --border: #cfbec1;
   --input: #cfbec1;
-  --ring: #dd602d;
+  --ring: #d97757;
 
-  --banner-background: #ee622a;
+  --banner-background: #d97757;
   --banner-foreground: #fff7f2;
   --month-picker: #574a45;
   --month-picker-foreground: #fdf9f7;
-  --description: #cfbec1;
+  --description: #bcd2ca;
+  --description-foreground: #322e2c;
   --income: #574a45;
-  --expense: #dd602d;
+  --expense: #d97757;
 
   --bg-necessidade: #bbf7d0;
   --bg-necessidade-foreground: #147e3d;
@@ -42,19 +43,19 @@
   --bg-objetivo: #d8b4fe;
   --bg-objetivo-foreground: #8c21ea;
 
-  --chart-1: #ee622a;
-  --chart-2: #dd602d;
-  --chart-3: #19d05f;
-  --chart-4: #f66f51;
-  --chart-5: #a333ee;
+  --chart-1: #d97757;
+  --chart-2: #d97757;
+  --chart-3: #45ce79;
+  --chart-4: #d46147;
+  --chart-5: #9d58cb;
   --sidebar: #f8f6f4;
   --sidebar-foreground: #352a27;
   --sidebar-primary: #574a45;
   --sidebar-primary-foreground: #fff7f2;
-  --sidebar-accent: #ee622a;
+  --sidebar-accent: #d97757;
   --sidebar-accent-foreground: #f8f6f4;
   --sidebar-border: #c3b3b6;
-  --sidebar-ring: #dd602d;
+  --sidebar-ring: #d97757;
 
   --radius: 0.4rem;
   --shadow-2xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
@@ -80,27 +81,28 @@
   --card-foreground: #fff7f2;
   --popover: #1f1a19;
   --popover-foreground: #fff7f2;
-  --primary: #ee622a;
+  --primary: #d97757;
   --primary-foreground: #1b100d;
   --secondary: #574a45;
   --secondary-foreground: #fff7f2;
   --muted: #2b2524;
   --muted-foreground: #c3b3b6;
-  --accent: #dd602d;
+  --accent: #d97757;
   --accent-foreground: #fff7f2;
   --destructive: #d84a3a;
+  --description-foreground: #322e2c;
   --destructive-foreground: #fff7f2;
   --border: #2e2726;
   --input: #2e2726;
-  --ring: #dd602d;
+  --ring: #d97757;
 
-  --banner-background: #ee622a;
+  --banner-background: #d97757;
   --banner-foreground: #1c1817;
   --month-picker: #574a45;
   --month-picker-foreground: #f7efed;
-  --description: #dd602d;
-  --income: #ee622a;
-  --expense: #dd602d;
+  --description: #bcd2ca;
+  --income: #d97757;
+  --expense: #d97757;
 
   --bg-necessidade: #15803d;
   --bg-necessidade-foreground: #a7f3d0;
@@ -109,19 +111,19 @@
   --bg-objetivo: #701a75;
   --bg-objetivo-foreground: #d8b4fe;
 
-  --chart-1: #ee622a;
-  --chart-2: #dd602d;
-  --chart-3: #19d05f;
-  --chart-4: #f66f51;
-  --chart-5: #a333ee;
+  --chart-1: #d97757;
+  --chart-2: #d97757;
+  --chart-3: #45ce79;
+  --chart-4: #d46147;
+  --chart-5: #9d58cb;
   --sidebar: #221d1c;
   --sidebar-foreground: #fff7f2;
-  --sidebar-primary: #dd602d;
+  --sidebar-primary: #d97757;
   --sidebar-primary-foreground: #fff7f2;
-  --sidebar-accent: #dd602d;
+  --sidebar-accent: #d97757;
   --sidebar-accent-foreground: #fff7f2;
   --sidebar-border: #2e2726;
-  --sidebar-ring: #dd602d;
+  --sidebar-ring: #d97757;
 
   --radius: 0.4rem;
   --shadow-2xs: 0 1px 3px 0px hsla(0, 0%, 23%, 0.05);
@@ -164,6 +166,7 @@
   --color-month-picker: var(--month-picker);
   --color-month-picker-foreground: var(--month-picker-foreground);
   --color-description: var(--description);
+  --color-description-foreground: var(--description-foreground);
   --color-income: var(--income);
   --color-expense: var(--expense);
 
